# ml-challenges

./: README.md  costarica.ipynb  flavours.ipynb  loan_analysis.ipynb  loan_survival_analysis.ipynb
rnn_addition/: README.md  requirements.txt  rnn_exploration.ipynb  sequence_addition.ipynb  setup.cfg
rnn_addition/sequence_addition/: data.py  rnn.py  visualization.py
