[metadata]
name = sequence_addition
description = Solution for the adding problem using RNNs
version = 0.3
long_description = file: README.md
author = Kai Poethkow
license = CC-BY

[options]
zip_safe = False
packages = find:
install_requires =
    numpy==1.19.5
    tensorflow==2.5.0
    pandas==1.2.5
    notebook==6.4.0
    seaborn==0.11.1
    tqdm==4.61.1
